:recycle: refactor: Refactor Student List page using JSTL + Add /register route to AuthServlet

--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -165,6 +165,11 @@ th, td {
   margin-bottom: 8px;
 }
 
+.form-group label {
+  display: inline-block;
+  min-width: 120px;
+}
+
 .error-message {
   color: red;
   font-weight: bold;
